# jetson-fans-daemon

./: CMakeLists.txt  README.md  install.sh
include/: fan-daemon.h
src/: fan-daemon.cpp
